--- a/mitiv/linalg/RankOneOperator.html
+++ b/mitiv/linalg/RankOneOperator.html
@@ -191,13 +191,13 @@ extends <a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.l
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/RankOneOperator.html#getU()">getU</a></strong>()</code>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/RankOneOperator.html#getLeftVector()">getLeftVector</a></strong>()</code>
 <div class="block">Get the left vector of a rank-one linear operator.</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code><a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/RankOneOperator.html#getV()">getV</a></strong>()</code>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/RankOneOperator.html#getRightVector()">getRightVector</a></strong>()</code>
 <div class="block">Get the right vector of a rank-one linear operator.</div>
 </td>
 </tr>
@@ -349,13 +349,13 @@ extends <a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.l
 <dt><span class="strong">Parameters:</span></dt><dd><code>vec</code> - - The source and destination vector.</dd><dd><code>job</code> - - The type of operation to perform.</dd></dl>
 </li>
 </ul>
-<a name="getU()">
+<a name="getLeftVector()">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>getU</h4>
-<pre>public&nbsp;<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;getU()</pre>
+<h4>getLeftVector</h4>
+<pre>public&nbsp;<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;getLeftVector()</pre>
 <div class="block">Get the left vector of a rank-one linear operator.</div>
 <dl><dt><span class="strong">Returns:</span></dt><dd>The left vector of the rank-one linear operator.</dd></dl>
 </li>
@@ -374,13 +374,13 @@ extends <a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.l
 <dd><code><a href="../../mitiv/exception/IncorrectSpaceException.html" title="class in mitiv.exception">IncorrectSpaceException</a></code></dd></dl>
 </li>
 </ul>
-<a name="getV()">
+<a name="getRightVector()">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>getV</h4>
-<pre>public&nbsp;<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;getV()</pre>
+<h4>getRightVector</h4>
+<pre>public&nbsp;<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;getRightVector()</pre>
 <div class="block">Get the right vector of a rank-one linear operator.</div>
 <dl><dt><span class="strong">Returns:</span></dt><dd>The right vector of the rank-one linear operator.</dd></dl>
 </li>
